# rb-skills

./: .gitignore  AGENTS.md  README.md
docs/: safe-operation-process.html
rb-architecture-review/: SKILL.md
rb-assess-plan-safety/: SKILL.md
rb-clarify/: SKILL.md
rb-context-tokens/: SKILL.md
rb-continue-project/: SKILL.md
rb-continue-session/: SKILL.md
rb-create-implementation-plan/: SKILL.md
rb-create-issues/: SKILL.md
rb-create-low-level-plan/: SKILL.md
rb-create-skill-evals/: SKILL.md
rb-diagnose/: SKILL.md
rb-discuss/: SKILL.md
rb-end-session/: SKILL.md
rb-execute-plan/: SKILL.md
rb-explain-codebase/: SKILL.md
rb-explain-diff/: SKILL.md
rb-full-start/: SKILL.md
rb-grill-with-docs/: SKILL.md
rb-implement-with-tests/: SKILL.md
rb-implementation-phase-planner/: SKILL.md
rb-install-skills/: SKILL.md
rb-multi-agent-systems/: SKILL.md
rb-new-wiki/: SKILL.md
rb-project-language/: SKILL.md
rb-research-question-gate/: SKILL.md
rb-review-pr-or-diff/: SKILL.md
rb-safe-operation/: SKILL.md
rb-safe-operation/runtime/: pyproject.toml
rb-safe-operation/runtime/src/rb_safe_operation/: __init__.py  audit.py  canonical.py  cli.py  fakes.py  models.py  paths.py  planning.py  policy.py  schemas.py  state.py  workflow.py
rb-safe-operation/runtime/src/rb_safe_operation/data/: global-policy-1.0.json
rb-safe-operation/runtime/tests/: helpers.py  test_matrix.py  test_runtime.py
rb-session-handoff/: SKILL.md
rb-setup-local-agent-skills/: SKILL.md
rb-start-project/: SKILL.md
rb-sync-skills-repo/: SKILL.md
rb-wiki/: SKILL.md
(+177 files in other folders)
